feat: integrate new custom supabase schema with local pglite
